Fix resource page styling on small screens

--- a/packages/webapp/src/ui/components/pages/Resource/styles.scss
+++ b/packages/webapp/src/ui/components/pages/Resource/styles.scss
@@ -2,6 +2,11 @@
 
 .resource {
   z-index: 10;
+
+  @media screen and (max-width: 450px) {
+    background-color: white;
+  }
+
   > .content {
     z-index: 3;
     width: 100%;
@@ -14,8 +19,18 @@
     @media screen and (max-width: 450px) {
       margin-top: 0;
       padding: 0;
+      > .main-column {
+        padding: 34px;
+      }
     }
 
+    @media screen and (min-width: 450px) {
+      > .main-column {
+        > .main-resource-card {
+          padding: 26px 34px 34px 34px;
+        }
+      }
+    }
     @media (min-width: 450px) and (max-width: 800px) {
       > .main-column {
         gap: 15px;
@@ -35,6 +50,10 @@
 
     @media screen and (max-width: 450px) {
       > .main-column {
+        > .main-resource-card {
+          padding-top: 0;
+          padding-bottom: 0;
+        }
         > .resource-footer {
           > :not(.one-column) {
             display: none;
@@ -42,13 +61,14 @@
           .one-column {
             display: flex;
             flex-direction: column;
+            gap: 30px;
           }
         }
       }
     }
 
     > .main-column {
-      gap: 15px;
+      gap: 30px;
       width: 65%;
       height: 100%;
 
@@ -56,7 +76,6 @@
         display: flex;
         flex-direction: column;
         gap: 22px;
-        padding: 26px 34px 34px 34px;
         position: relative;
 
         > .info-card {
@@ -325,6 +344,16 @@
 
       > .resource-footer {
         display: none;
+
+        > .one-column {
+          width: 100%;
+
+          > .contributor-card {
+            @media screen and (max-width: 450px) {
+              padding: 0;
+            }
+          }
+        }
       }
     }
 
@@ -365,13 +394,15 @@
     > .main-column > .resource-footer > * > .extra-details-card {
       width: 100%;
       height: fit-content;
-      padding: 25px;
       display: flex;
-
       flex-direction: column;
       gap: 13px;
       flex-wrap: wrap;
       justify-content: center;
+
+      @media screen and (min-width: 450px) {
+        padding: 25px;
+      }
 
       > .dropdown,
       > .date > .fields > .dropdown {
@@ -500,11 +531,14 @@
     .resource-action-card {
       width: 100%;
       height: fit-content;
-      padding: 25px;
       display: flex;
       gap: 10px;
       flex-direction: column;
       align-items: center;
+
+      @media screen and (min-width: 450px) {
+        padding: 25px;
+      }
 
       @media screen and (min-width: 1000px) {
         > .button,
